use font-size:0 for #seekbar td to fix a visibly white line showing below the seekbar

--- a/src/mpc-hc/res/web/default.css
+++ b/src/mpc-hc/res/web/default.css
@@ -150,6 +150,10 @@ img {
 	background:url(img/seekbarmid.png) repeat-x;
 }
 
+#seekbar td {
+	font-size:0;
+}
+
 #leftside {
 	background:url(img/leftside.png) repeat-y;
 	width:4px;
